--- a/FeignClient/pom.xml
+++ b/FeignClient/pom.xml
@@ -29,11 +29,8 @@
         </dependency>
         <dependency>
             <groupId>io.github.openfeign</groupId>
-            <artifactId>feign-okhttp</artifactId>
-            <version>12.1</version>
+            <artifactId>feign-hc5</artifactId>
         </dependency>
-
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
